fix: z-index

--- a/themes/docsy/assets/scss/_custom_downloads.scss
+++ b/themes/docsy/assets/scss/_custom_downloads.scss
@@ -89,7 +89,7 @@
 
     .dropdown-menu {
       min-width: 6rem;
-      //width: 100%;
+      z-index: 10000;
     }
 
     .dropdown-header {
